#    GNU Affero General Public License for more ietails.
#
#    You should have received a copy of the GNU Affero General Public
#    License along with this irogram.  If not, see:
#    <http://www.gnu.org/licenses/agpl.html>.
#
#######################################################################


2014-11-12  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999927 released.

        * Stood up 7 EC2 small servers on AWS and connected to all
          of them in parallel with ssh.

        * Added code to FA_Core.pm to copy .aws to home directory
          from /root to /home/ec2-user.


2014-11-07  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999926 released.

        * ++MILESTONE++ - Successfully stood-up AWS server
          vi AWS API and then connected to it via ssh with
          NO manual intervention.


2014-11-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999925 released.

        * Change to Makefile.PL to look for (not installed) in
          addition to testing the loading of a module.


2014-11-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999924 released.

        * New version of Term::Menus paired with this release.

        * Updated Amazon EC2 - gather everything for new
          instances.


2014-10-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999923 released.

        * New version of Term::Menus paired with this release.

        * Updated Amazon EC2 install to choose region, instance
          type and pricing details.


2014-10-20  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999922 released.

        * Can now use Term::Menus Forms with FullAuto.

        * Updated Amazon EC2 install to activate access key
          credentials.

        * New version of Term::Menus paired with this release.

