@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 575681e68049a0ac0c29142d85f528431c2c106f ChangeLog
+SHA1 b37238bc3710f50c7159914bfabf39d290cfdb1e ChangeLog
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 e3ab438d5df16ebbbe11679825b593a21eafc714 MANIFEST
-SHA1 a8257e09699e2c87f695ebff187edbda54498cb6 META.yml
-SHA1 23bcd0e9e232ee748bf47abe28682cb1cc6143ee Makefile.PL
+SHA1 1dd014a34ebb78e5f6e77f271cf929e1f3710d8f META.yml
+SHA1 6bb106f470ccee69687df5341124983fbb9550c4 Makefile.PL
 SHA1 7a59a87222485f6c0e7026b30c8195c47823b3b5 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 ade875b98aca4971a381d2e037ed009b52c2f8da bin/fullauto.pl
@@ -133,17 +133,17 @@ SHA1 fe312c3ed58aac44bd3bebb39bef97df2c70ecad lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 bde47d7e159545b9a32c518527e122b5c5231901 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 15b442ad7e268218b9156d48bba27c6d84ebcb57 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 cec40c3b74489f2522fac0c17b7a961a36b767d1 lib/Net/FullAuto/FA_Core.pm
+SHA1 1be577943acf291e5dfad66ee336d6fc95aad9d4 lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJUY2g/AAoJEBa/9Pad787Eaa4H/1lrhSU24EzLZOwVC28Yec9f
-1qzjHYuKJs9qcr8Z8ZAux2yeBCa0IUOGxJiRQL/H/HnIxQX7RX2Eq/lbNsA45g/g
-WxtJcCLW0UrH3tMVZQxKsNaWuAcBCpnZ9d6lWyvRnP8Xj4cudD/kNA3S82qiq8nd
-Xx6VFPovOlVElQa2LimuuscsNuV6HZ+MAzdrGYi7GGnTPVEuYfcbsXLMj68UrG+e
-FXtjroWJ/5Jfuf2Q+49S+aUmEOJPEazuDbnjKF2KbIgWuTX9BQ11FtdlhdXA4mhP
-IE1wt1tNwkmcKsgwPLpVoC318xuRzhbiw/eoNk3ISBLmDIJyPM3ooR2nq9bBw2s=
-=gITi
+iQEcBAEBAgAGBQJUY/WxAAoJEBa/9Pad787EBdEH+wUhVBTMEsxqWEPTRUnGbmwO
+pzYhEQvK+0eLPa0B5Hxh72oMPxyZbpisiVwteHG0sfXHxyHeowN8DztVpgkt+3z+
+enrRBNPpB8jyVrnH2xk2jaqPaeUcrppa229YBCVpivplQBvXfmz2y58dGlw5FSyA
+VhWcNTGqBOIPsrsWqNCo/2nh/tAkXvMAM8qTnYxNHha44EDhMSc4XqLmElTFq6Ha
+UzjNbxLltuJtUCszdpq6uGMLsBGIDdj/FO/bOpS17Rt8Z4gi7FyNw+6n+hQjVBsT
+CMoVSSg/QCqs/x2/Zldnp6XkMcjKvu0Sqy+Q32eo06gLfRslQrgYq03UhbrTHGY=
+=BAjT
 -----END PGP SIGNATURE-----
